--- a/regisztracio.html
+++ b/regisztracio.html
@@ -3,26 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
     <title>Regisztráció</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-
-    <div class="container">
-
+    <form>
         <h1>Regisztráció</h1>
-        <h2>E-mail cím</h2><br>
-        <input type="email" id="email" placeholder="Add meg az email címet!"><br>
 
-        <h2>Jelszó</h2><br>
-        <input type="pwd" id="pwd1" placeholder="Add meg a jelszót!"><br>
+        <input type="email" id="email" placeholder="E-mail címed">
+        <input type="password" id="pwd1" placeholder="Jelszó">
+        <input type="password" id="pwd2" placeholder="Jelszó megerősítése">
 
-        <h2>Megerősítés</h2><br>
-        <input type="pwd" id="pwd2" placeholder="Jelszó megerősítése"><br>
-
-        <button onclick="regist()">Regisztráció!</button><br>
-        <a href="bejelentkezes.html">Bejelentkezés!</a>
-    </div>
+        <button type="button" onclick="regist()">Regisztráció</button>
+        <a href="bejelentkezes.html">Már van fiókod? Bejelentkezés</a>
+    </form>
 </body>
 </html>
